# BootstrapPlayground

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hello.sh  test.ps1  wget-log  wget-log.1  wget-log.2  wget-log.3
.github/workflows/: _build-arch.yml  build-arm.yml  build-arm64.yml  build-x64.yml  build-x86.yml  build.yml
cmake/: Sanitizers.cmake  toolchain.cmake
driver_loader/: CMakeLists.txt
driver_loader/include/: driver_loader.hpp  logger.hpp  wdf.hpp  wdm.hpp
driver_loader/src/: call_trace.cpp  driver_loader.cpp  nt_cng.cpp  nt_crt.cpp  nt_dbg.cpp  nt_etw.cpp  nt_ex.cpp  nt_io.cpp  nt_ke.cpp  nt_misc.cpp  nt_mm.cpp  nt_ob.cpp  nt_ps.cpp  nt_rtl.cpp  nt_se.cpp  nt_stub_common.hpp  nt_stubs.cpp  nt_stubs_internal.hpp  nt_wdf.cpp  nt_zw.cpp
drivers/: lxmonika_arm.sys  lxmonika_arm64.sys  lxmonika_x64.sys  lxmonika_x86.sys
scripts/: fix-config-h.py
test_driver/: CMakeLists.txt  test_driver.cpp
test_host/: CMakeLists.txt  test_host.cpp
